--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,9 @@ MODEL: ResNet18
 PRETRAINED: False
 LOSS: CrossEntropyLoss
 
-LR_RATE_LIST: [3e-4 , 1e-4 , 3e-5 , 1e-5]
+LR_RATE_LIST: [3e-4 , 1e-4]
+LR_RATE_LIST2: [3e-5 , 1e-5]
 NUM_EPOCHS_LIST: [15, 20, 25]
+NUM_EPOCHS_LIST2: [30, 35, 40]
 AUGMENT_LIST: [Minimal, Medium, Heavy]
 
