--- a/config_finetune.yaml
+++ b/config_finetune.yaml
@@ -15,7 +15,7 @@ LOSS: CrossEntropyLoss
 
 CUDA_DEVICE: 0
 
-RUN_NAME: "2023-12-26_18-28-36"
+RUN_NAME: "2023-12-26_18-28-36" #specify init model path
 
 LR_RATE_LIST: [3e-4 , 1e-4, 3e-5 , 1e-5]
 NUM_EPOCHS_MINIMAL: [15, 20, 25]
@@ -28,8 +28,8 @@ datasets: &DATASET_OPTIONS
   - &CIFAR Cifar
   - &RSNA Rsna
 
-NUM_CLASSES: 10 #2 for RSNA, 10 for CIFAR
-DATASET: *CIFAR
+NUM_CLASSES: 2 #2 for RSNA, 10 for CIFAR
+DATASET: *RSNA
 
 RSNA_PATH: "dataset/rsna_18"
 
