--- a/config_finetune.yaml
+++ b/config_finetune.yaml
@@ -1,6 +1,7 @@
 LEARNING_RATE : 1e-3
 LEARNING_SCHEDULER : CosineAnnealingLR
-BATCH_SIZE : 256
+BATCH_SIZE : 128
+NUM_WORKERS : 16
 NUM_EPOCHS : 30
 LINEAR_PROBING: False
 PROBING_EPOCHS : 30
@@ -13,7 +14,8 @@ MODEL: ResNet18
 PRETRAINED: False
 LOSS: CrossEntropyLoss
 
-CUDA_DEVICE: 0
+CUDA_DEVICE: 1
+
 
 # RUN_NAME: "2023-12-26_18-28-36" #CIFAR
 RUN_NAME: "2023-12-26_21-49-40" #RSNA
