--- a/config_finetune.yaml
+++ b/config_finetune.yaml
@@ -17,8 +17,8 @@ LOSS: CrossEntropyLoss
 CUDA_DEVICE: 1
 
 
-# RUN_NAME: "2023-12-26_18-28-36" #CIFAR
-RUN_NAME: "2023-12-26_21-49-40" #RSNA
+RUN_NAME: "2024-01-03_18-34-40" #CIFAR
+# RUN_NAME: "2023-12-26_21-49-40" #RSNA
 
 
 LR_RATE_LIST: [3e-4 , 1e-4, 3e-5 , 1e-5]
@@ -32,8 +32,8 @@ datasets: &DATASET_OPTIONS
   - &CIFAR Cifar
   - &RSNA Rsna
 
-NUM_CLASSES: 2 #2 for RSNA, 10 for CIFAR
-DATASET: *RSNA
+NUM_CLASSES: 10 #2 for RSNA, 10 for CIFAR
+DATASET: *CIFAR
 
 RSNA_PATH: "dataset/rsna_18"
 
