--- a/configs/test_config.yaml
+++ b/configs/test_config.yaml
@@ -1,25 +1,30 @@
 BATCH_SIZE: 128
-CLASSIFICATION: MultiClass
 CUDA_DEVICE: 0
-DATASET: Cifar10
 IMAGE_SIZE: 224
-MODEL: ResNet50
 NUM_CLASSES: 10
 NUM_WORKERS: 16
-PATH: ./dataset/cifar""./dataset/cifar/cifar1098_idxs.npy
+
+datasets: &DATASET_OPTIONS
+  - &CIFAR10 Cifar10
+  - &CIFAR100 Cifar100
+  - &RSNA Rsna
+  - &HAM HAM
+  - &APTOS APTOS
+
+paths: &PATH_OPTIONS
+  - &CIFAR_PATH ./dataset/cifar""./dataset/cifar/cifar1098_idxs.npy
+  - &RSNA_PATH ./dataset/rsna18""./dataset/rsna18/csv/final_dataset_wo_not_normal_cases.csv
+  - &HAM_PATH ./dataset/ISIC/ISIC2018_Task3_Training_Input/""./dataset/ISIC/ISIC2018_Task3_Validation_Input/""./dataset/ISIC/ISIC2018_Task3_Test_Input/""./dataset/ISIC/ISIC2018_Task3_Training_GroundTruth/ISIC2018_Task3_Training_GroundTruth.csv""./dataset/ISIC/ISIC2018_Task3_Validation_GroundTruth/ISIC2018_Task3_Validation_GroundTruth.csv""./dataset/ISIC/ISIC2018_Task3_Test_GroundTruth/ISIC2018_Task3_Test_GroundTruth.csv
+  - &APTOS_PATH ./dataset/224_data/DR/aptos/""./dataset/224_data/DR/aptos/aptos_dataset_splits.csv
+
+
+WEIGHT_PATH: "/l/users/santosh.sanjeev/model_soups/runs/san_final_hyp_models/san-finetune/cifar_final_hyp/deit-S/2024-01-07_18-19-48/"
 PRETRAINING: ImageNet
+MODEL: DeiT-S
+CLASSIFICATION: MultiClass
 TASK: Classification
-WEIGHT_PATH: /l/users/santosh.sanjeev/model_soups/runs/san_final_hyp_models/san-finetune/cifar_final_hyp/resnet-50/2024-01-05_17-41-27/
-datasets:
-- Cifar10
-- Cifar100
-- Rsna
-- HAM
-- APTOS
-paths:
-- ./dataset/cifar""./dataset/cifar/cifar1098_idxs.npy
-- ./dataset/rsna18""./dataset/rsna18/csv/final_dataset_wo_not_normal_cases.csv
-- ./dataset/ISIC/ISIC2018_Task3_Training_Input/""./dataset/ISIC/ISIC2018_Task3_Validation_Input/""./dataset/ISIC/ISIC2018_Task3_Test_Input/""./dataset/ISIC/ISIC2018_Task3_Training_GroundTruth/ISIC2018_Task3_Training_GroundTruth.csv""./dataset/ISIC/ISIC2018_Task3_Validation_GroundTruth/ISIC2018_Task3_Validation_GroundTruth.csv""./dataset/ISIC/ISIC2018_Task3_Test_GroundTruth/ISIC2018_Task3_Test_GroundTruth.csv
-- ./dataset/224_data/DR/aptos/""./dataset/224_data/DR/aptos/aptos_dataset_splits.csv
-test_sort_by: 'Test Accuracy'
-val_sort_by: 'Val Accuracy'
+DATASET: *CIFAR10
+PATH: *CIFAR_PATH
+test_sort_by: Test Accuracy
+val_sort_by: Val Accuracy
+NUM_CLASSES: 10 #2 for RSNA, 10 for CIFAR 
