--- a/configs/fge.yaml
+++ b/configs/fge.yaml
@@ -9,22 +9,29 @@ datasets: &DATASET_OPTIONS
   - &RSNA Rsna
   - &HAM HAM
   - &APTOS APTOS
+  - &CHEXPERT CHEXPERT
 
 paths: &PATH_OPTIONS
   - &CIFAR_PATH ./dataset/cifar""./dataset/cifar/cifar1098_idxs.npy
   - &RSNA_PATH ./dataset/rsna18""./dataset/rsna18/csv/final_dataset_wo_not_normal_cases.csv
   - &HAM_PATH ./dataset/ISIC/ISIC2018_Task3_Training_Input/""./dataset/ISIC/ISIC2018_Task3_Validation_Input/""./dataset/ISIC/ISIC2018_Task3_Test_Input/""./dataset/ISIC/ISIC2018_Task3_Training_GroundTruth/ISIC2018_Task3_Training_GroundTruth.csv""./dataset/ISIC/ISIC2018_Task3_Validation_GroundTruth/ISIC2018_Task3_Validation_GroundTruth.csv""./dataset/ISIC/ISIC2018_Task3_Test_GroundTruth/ISIC2018_Task3_Test_GroundTruth.csv
   - &APTOS_PATH ./dataset/224_data/DR/aptos/""./dataset/224_data/DR/aptos/aptos_dataset_splits.csv
+  - &CHEXPERT_PATH ./dataset/""./dataset/""./dataset/""./dataset/CheXpert-v1.0_224/csv/train.csv""./dataset/CheXpert-v1.0_224/csv/valid.csv""./dataset/CheXpert-v1.0_224/csv/test_labels_v2.csv
 
 
-WEIGHT_PATH: "/l/users/santosh.sanjeev/model_soups/runs/san_final_hyp_models/san-finetune/aptos_final_hyp/deitS_imagenet/2024-01-10_02-53-56/"
+WEIGHT_PATH: "/l/users/santosh.sanjeev/model_soups/runs/san_final_hyp_models/san-finetune/chexpert_final_hyp/resnet50_imagenet/2024-01-17_17-07-33/"
 PRETRAINING: ImageNet
-MODEL: DeiT-S
-CLASSIFICATION: MultiClass
+MODEL: ResNet50
+CLASSIFICATION: MultiLabel
 TASK: Classification
-DATASET: *APTOS
-PATH: *APTOS_PATH
-test_sort_by: Test F1
-val_sort_by: Val F1
-LOSS: CrossEntropyLoss
-NUM_CLASSES: 5 #2 for RSNA, 10 for CIFAR 
+DATASET: *CHEXPERT
+PATH: *CHEXPERT_PATH
+test_sort_by: Test AUC
+val_sort_by: Val AUC
+LOSS: BCEWithLogitsLoss
+NUM_CLASSES: 13 #2 for RSNA, 10 for CIFAR
+LR1: 0.001
+LR2: 0.000001
+WD: 0.0001
+MOMENTUM: 0.9
+CYCLE: 4
